--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -1,10 +1,13 @@
-{% for product in collections.frontpage.products limit:4 %}
-  <div>
-    <a href="{{ product.url | within: collection }}">{{ product.title }}</a>
-    {{ product.price | money }}
-    {% unless product.available %}<br><strong>sold out</strong>{% endunless %}
-    <a href="{{ product.url | within: collection }}">
-      <img src="{{ product.featured_image.src | img_url: 'large' }}" alt="{{ product.featured_image.alt | escape }}">
-    </a>
-  </div>
-{% endfor %}
+{% assign collection = collections['featured-collection'] %}
+{{ collection.title }}
+
+<ul>
+  {% for product in collection.products %}
+    <li>
+      <a href="{{ product.url }}">{{ product.title }} - {{ product.price | money }}</a>
+      {% unless product.available %}
+        (SOLD OUT)
+      {% endunless %}
+    </li>
+  {% endfor %}
+</ul>
